--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,22 +1,22 @@
-:root {
-  line-height: 1.5;
-  font-weight: 400;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  background-color: #121212;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  box-sizing: border-box; 
+  margin: 0;
+  padding: 0;
 }
 
 body {
-  margin: 0px;
-  padding: 0px;
+  font: 14px Helvetica, Arial, sans-serif;
 }
 
-body > div {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
+html,
+body {
+  width: 100%;
+  height: 100%;
 }
+
+canvas {
+  top: 0;
+  left: 0;
+  position: absolute;
+}
+
